feat: improve parsed request cards
